--- a/Style/style.css
+++ b/Style/style.css
@@ -11438,8 +11438,16 @@ section {
   margin-left: 10px;
   margin-right: 10px;
 }
+.pictures h2, .pictures .h2 {
+  color: red;
+  margin-bottom: 10px;
+}
+.pictures .carousel-item img {
+  margin-left: auto;
+  margin-right: auto;
+}
 
-#sainte_suzanne_2011, #second_slideshow {
+#sainte_suzanne_2011 {
   padding-bottom: 10px;
 }
 
@@ -11447,11 +11455,11 @@ section {
   position: relative;
   margin-top: 10px;
   font-size: 10px;
-  color: #a71818;
+  font-weight: bold;
+  color: white;
   width: 80px;
   opacity: 1;
   transition: opacity 0.35s ease;
-  font-weight: bold;
 }
 
 #carousel_control {
@@ -11496,6 +11504,7 @@ section {
   font-size: 8px;
 }
 
+/*---------------------------------------------------------------------------------------*/
 /*RESPONSIVE*/
 @media screen and (min-width: 576px) and (max-width: 1023px) {
   /* for tablette & landscape */
@@ -11548,9 +11557,14 @@ section {
 
   /*PICTURES*/
   .pictures img {
-    max-width: 700px;
+    max-width: 600px;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .carousel .carousel-control-prev, .carousel .carousel-control-next {
+    font-size: 15px;
+    width: 200px;
   }
 
   /*CONTACT*/
@@ -11569,6 +11583,7 @@ section {
     font-size: 13px;
   }
 }
+/*---------------------------------------------------------------------------------------*/
 /* FOR DESKTOP */
 @media screen and (min-width: 1024px) {
   /*GENERAL*/
@@ -11674,6 +11689,11 @@ section {
     max-width: 700px;
     margin-left: auto;
     margin-right: auto;
+  }
+
+  .carousel .carousel-control-prev, .carousel .carousel-control-next {
+    font-size: 20px;
+    width: 200px;
   }
 
   /*CLUB*/
