--- a/Style/style.css
+++ b/Style/style.css
@@ -11438,6 +11438,9 @@ section {
   margin-left: 10px;
   margin-right: 10px;
 }
+.pictures .carousel-2011 {
+  padding: 0;
+}
 .pictures h2, .pictures .h2 {
   color: red;
   margin-bottom: 10px;
@@ -11445,10 +11448,6 @@ section {
 .pictures .carousel-item img {
   margin-left: auto;
   margin-right: auto;
-}
-
-#sainte_suzanne_2011 {
-  padding-bottom: 10px;
 }
 
 .carousel .carousel-control-prev, .carousel .carousel-control-next {
