--- a/scss/partial/_Main.scss
+++ b/scss/partial/_Main.scss
@@ -50,6 +50,11 @@ section {
   font-weight: bold;
 } 
 
+#FFm2022 {
+  size: 500px;
+
+}
+
 /*EVENT*/
 
 /*E-mail Event juillet 2025*/
@@ -318,7 +323,7 @@ article {
   }  
 
   .card-footer {
-    font-size: $size_20;
+    font-size: $size_15;
   }
 
 /* HOME */ 
