--- a/scss/partial/_Main.scss
+++ b/scss/partial/_Main.scss
@@ -43,6 +43,12 @@ section {
   font-family: 'Gloria Hallelujah';
 }
 
+#ag_date {
+  font-size: 12px;
+  color: rgb(17, 217, 40);
+  text-align: center;
+}
+
 .general_information .adhésion {
   text-decoration: underline;
   color: $red;
